--- a/DrawCharts/packages.config
+++ b/DrawCharts/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Accord" version="3.2.0" targetFramework="net452" />
+  <package id="Accord" version="3.2.0" targetFramework="net452" requireReinstallation="true" />
   <package id="MathNet.Numerics" version="3.13.1" targetFramework="net452" />
   <package id="Microsoft.Chart.Controls" version="3.5.30729" targetFramework="net452" />
 </packages>
